feat(model-server): made content explorer hierarchical
Added basic styling, made nodes collapsible.

--- a/model-server/src/main/resources/templates/fragments/node_item.html
+++ b/model-server/src/main/resources/templates/fragments/node_item.html
@@ -1,19 +1,44 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-    <div th:fragment="nodeItem (node)">
-        <h2 th:text="${node}">node</h2>
-        <h3>vals</h3>
-        <ul>
-            <li th:each="propertyRole : ${node.getPropertyRoles}">
-                <b th:text="${propertyRole}">propertyRole</b>
-                <i th:text="${node.getPropertyValue(propertyRole)}">value</i>
-            </li>
-        </ul>
-        <h3>refs</h3>
-        <ul>
-            <li th:each="referenceRole : ${node.getReferenceRoles}">
-                <b th:text="${referenceRole}">referenceRole</b>
-                <i th:text="${node.getReferenceTargetRef(referenceRole)}">target</i>
-            </li>
-        </ul>
-    </div>
+    <head>
+        <link rel="stylesheet" type="text/css" href="../styles/style.css">
+    </head>
+    <ul>
+        <li class="nodeItem" th:fragment="nodeItem (node)">
+            <a class="expander" th:text="${node}">node</a>
+            <span th:if="${node.getConceptReference() != null}" th:text="${'concept ref: ' + node.getConceptReference().getUID()}">conceptReference</span>
+            <div class="nodeContent">
+                <div th:with="nodeEmpty=${node.getPropertyRoles().isEmpty && node.getReferenceRoles.isEmpty}">
+                    <div th:if="${nodeEmpty}">
+                        No roles.
+                    </div>
+                    <table class="nested" th:if="${!nodeEmpty}">
+                        <thead>
+                            <tr>
+                                <th>PropertyRole</th>
+                                <th>Value</th>
+                            </tr>
+                        </thead>
+                        <tr th:each="propertyRole : ${node.getPropertyRoles}">
+                            <td th:text="${propertyRole}">role</td>
+                            <td th:text="${node.getPropertyValue(propertyRole)}">value</td>
+                        </tr>
+                        <thead>
+                            <tr>
+                                <th>ReferenceRole</th>
+                                <th>Value</th>
+                            </tr>
+                        </thead>
+                        <tr th:each="referenceRole : ${node.getReferenceRoles}">
+                            <td th:text="${referenceRole}">referenceRole</td>
+                            <td th:text="${node.getReferenceTargetRef(referenceRole)}">target</td>
+                        </tr>
+                    </table>
+                    <ul class="nodeTree" th:each="child : ${node.allChildren}">
+                        <li th:replace="fragments/node_item :: nodeItem (${child})">child</li>
+                    </ul>
+                </div>
+            </div>
+        </li>
+    </ul>
+
 </html>
