--- a/model-server/src/main/resources/templates/content_explorer.html
+++ b/model-server/src/main/resources/templates/content_explorer.html
@@ -2,14 +2,56 @@
 <html lang=en xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset=utf-8>
-    <title>Model Explorer</title>
+    <title>Content Explorer</title>
+    <link rel="stylesheet" type="text/css" th:href="@{style.css}">
+    <script language="javascript" type="text/javascript">
+    document.addEventListener("DOMContentLoaded", () => {
+        var expander = document.getElementsByClassName("expander");
+        var expandAllBtn = document.getElementById("expandAllBtn");
+        var collapseAllBtn = document.getElementById("collapseAllBtn");
+
+        for (let i = 0; i < expander.length; i++) {
+            expander[i].addEventListener("click", function() {
+                this.parentElement.querySelector(".nested").classList.toggle("active");
+                this.classList.toggle("expander-expanded");
+            });
+        }
+
+        expandAllBtn.addEventListener("click", function () {
+            var nested = document.getElementsByClassName("nested")
+            for (let i=0; i < nested.length; i++) {
+                nested[i].classList.add("active");
+            }
+            for (let i = 0; i < expander.length; i++) {
+                expander[i].classList.add("expander-expanded")
+            }
+        });
+
+        collapseAllBtn.addEventListener("click", function () {
+            var nested = document.getElementsByClassName("nested")
+            for (let i=0; i < nested.length; i++) {
+                nested[i].classList.remove("active");
+            }
+            for (let i = 0; i < expander.length; i++) {
+                expander[i].classList.remove("expander-expanded")
+            }
+        });
+    });
+    </script>
 </head>
 <body>
-<h1>Nodes</h1>
-<div th:each="node : ${childNodes}">
-    <div th:replace="fragments/node_item :: nodeItem (node=${node})">
-        <span>[PlaceHolder]</span>
+<h1>Model Server Content</h1>
+<button id="expandAllBtn" type="button">Expand all</button>
+<button id="collapseAllBtn" type="button">Collapse all</button>
+<ul class="nodeTree">
+    <div th:each="rootNode : ${rootNodes}">
+        <div th:each="child : ${rootNode.allChildren}">
+            <div th:replace="fragments/node_item :: nodeItem (node=${child})">
+                <span>[PlaceHolder]</span>
+            </div>
+        </div>
     </div>
-</div>
+</ul>
+
 </body>
 </html>
