refactor(model-server): renamed content_explorer files to content

--- a/model-server/src/main/resources/templates/content.html
+++ b/model-server/src/main/resources/templates/content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset=utf-8>
     <title>Content Explorer</title>
-    <link rel="stylesheet" type="text/css" th:href="@{style.css}">
+    <link rel="stylesheet" type="text/css" href="content.css">
     <style th:replace="fragments/menu_bar :: menuStyle"></style>
     <script language="javascript" type="text/javascript">
     document.addEventListener("DOMContentLoaded", () => {
