--- a/model-server/src/main/resources/templates/fragments/node_item.html
+++ b/model-server/src/main/resources/templates/fragments/node_item.html
@@ -1,6 +1,6 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
-        <link rel="stylesheet" type="text/css" href="../style.css">
+        <link rel="stylesheet" type="text/css" href="../content.css">
     </head>
     <ul>
         <li class="nodeItem" th:fragment="nodeItem (node)">
