--- a/model-server/src/main/resources/templates/headers.html
+++ b/model-server/src/main/resources/templates/headers.html
@@ -12,7 +12,7 @@
     <style th:replace="fragments/menu_bar :: menuStyle"></style>
 </head>
 <body>
-<ul th:replace="fragments/menu_bar :: menu (activeItem='headers')"></ul>
+<ul th:replace="fragments/menu_bar :: menu (activeItem='headers', baseUrl='.')"></ul>
 <h1>
     HTTP Headers
 </h1>
