--- a/model-server/src/main/resources/templates/history.html
+++ b/model-server/src/main/resources/templates/history.html
@@ -9,7 +9,7 @@
     <style th:replace="fragments/menu_bar :: menuStyle"></style>
 </head>
 <body>
-<ul th:replace="fragments/menu_bar :: menu (activeItem='history')"></ul>
+<ul th:replace="fragments/menu_bar :: menu (activeItem='history/', baseUrl='..')"></ul>
 <h1>
     History
 </h1>
