--- a/model-server/src/main/resources/templates/index.html
+++ b/model-server/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
     <style th:replace="fragments/menu_bar :: menuStyle"></style>
 </head>
 <body>
-    <ul th:replace="fragments/menu_bar :: menu (activeItem='root')"></ul>
+    <ul th:replace="fragments/menu_bar :: menu (activeItem='root', baseUrl='.')"></ul>
     <h1>
         Model Server
     </h1>
