fix(model-server): fixed content explorer css not being loaded in kubernetes cluster

--- a/model-server/src/main/resources/templates/content.html
+++ b/model-server/src/main/resources/templates/content.html
@@ -3,8 +3,104 @@
 <head>
     <meta charset=utf-8>
     <title>Content Explorer</title>
-    <link rel="stylesheet" type="text/css" href="content.css">
     <style th:replace="fragments/menu_bar :: menuStyle"></style>
+    <style>
+    body {
+        font-family: sans-serif;
+    }
+    table {
+      border-collapse: collapse;
+      font-family: sans-serif;
+      font-size: 0.9em;
+      border-radius:6px;
+    }
+    thead tr {
+      background-color: #009879;
+      color: #ffffff;
+      text-align: left;
+    }
+    th {
+      padding: 8px 10px;
+    }
+    td {
+      padding: 5px 10px;
+    }
+    tbody tr {
+      border-bottom: 1px solid #dddddd;
+      border-left: 1px solid #dddddd;
+      border-right: 1px solid #dddddd;
+    }
+    tbody tr:nth-of-type(even) {
+      background-color: #f3f3f3;
+    }
+    tbody tr:last-of-type
+      border-bottom: 2px solid #009879;
+    }
+    tbody tr.active-row {
+      font-weight: bold;
+      color: #009879;
+    }
+    .expander {
+        cursor: pointer;
+        margin-top: 12px;
+        font-size: 20px;
+        float: left;
+    }
+    .expander-expanded {
+        transition: .1s linear;
+        transform: rotate(90deg);
+        transform-origin: center center;
+    }
+    .nested {
+        display: none;
+        margin-left: 9px;
+        border-left: 1px solid #999999;
+    }
+    .active {
+        display: block;
+    }
+    .nodeTree {
+        list-style-type: none;
+    }
+    .treeRoot {
+        list-style-type: none;
+        margin-top: 5px;
+        float: left;
+    }
+    .referenceRoles {
+        margin-top: 5px;
+    }
+    .nodeItem {
+        padding-top: 10px;
+    }
+    .nameField {
+        margin-left: 30px;
+        padding: 5px;
+        border: 1px solid;
+        border-radius: 10px;
+        width: fit-content;
+        cursor: pointer;
+    }
+    .nameField:hover {
+        background-color: #e6e6e6;
+    }
+    .selectedNameField {
+        background-color: #c9c9c9;
+    }
+    #treeWrapper {
+        position: absolute;
+    }
+    #nodeInspector {
+        position: fixed;
+        top: 10%;
+        left: 65%;
+        width: 35%;
+        overflow-scroll;
+        z-index: 1;
+        display: none;
+        background-color: #ffffff;
+    }
+    </style>
     <script language="javascript" type="text/javascript">
     async function createInspectorDetails(nodeId) {
         let response = await window.fetch(window.location.href + nodeId + '/');
